# hyprnote-plyght

./: CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  package.json  pnpm-lock.yaml
apps/desktop/: package.json  tailwind.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/docs/: index.md  quickstart.md
apps/docs/data/: i18n.json
apps/docs/development/: mobile.md  plugin.md  server.md
apps/docs/tutorials/: ai-enhancement.md  first-recording.md  index.md
crates/audio/: Cargo.toml  build.rs
crates/audio/examples/: test_audiounit_formats.rs  test_simple_voice_processing.rs  test_voice_processing.rs  voice_processing_direct_access.rs
crates/audio/src/: apple_voice_processing.rs  audiounit_ffi.rs  integrated_voice_processing.rs  lib.rs  voice_processing_mic.rs  (+1 more)
plugins/connector/: Cargo.toml
plugins/listener/: Cargo.toml
plugins/location-connectivity/: Cargo.toml  build.rs  package.json  tsconfig.json
plugins/location-connectivity/js/: bindings.gen.ts  index.ts
plugins/location-connectivity/permissions/: default.toml
plugins/location-connectivity/permissions/autogenerated/: reference.md
plugins/location-connectivity/permissions/autogenerated/commands/: add_trusted_ssid.toml  get_current_ssid.toml  get_location_status.toml  get_trusted_ssids.toml  is_in_trusted_location.toml  is_location_based_enabled.toml  remove_trusted_ssid.toml  set_location_based_enabled.toml
plugins/location-connectivity/permissions/schemas/: schema.json
plugins/location-connectivity/src/: commands.rs  error.rs  ext.rs  lib.rs  store.rs  types.rs  wifi_macos.rs
plugins/windows/: Cargo.toml  build.rs
plugins/windows/js/: bindings.gen.ts
plugins/windows/permissions/: default.toml
plugins/windows/permissions/autogenerated/: reference.md
plugins/windows/permissions/schemas/: schema.json
plugins/windows/src/: commands.rs  ext.rs  lib.rs  overlay.rs
(+48 files in other folders)
