[package]
name = "tauri-plugin-windows"
version = "0.1.0"
authors = ["You"]
edition = "2021"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-windows"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { workspace = true }
objc2 = "0.5"
objc2-app-kit = "0.2"
objc2-foundation = "0.2"

[dependencies]
serde = { workspace = true }
specta = { workspace = true }
strum = { workspace = true, features = ["derive"] }

tauri = { workspace = true, features = ["test", "macos-private-api"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-analytics = { workspace = true }
tauri-plugin-auth = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
